--- a/Data cleaning and EDA.ipynb
+++ b/Data cleaning and EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "4  1956968416     neutral  @dannycastillo We want to trade with someone w..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "(40000, 3)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "4  dannycastillo want trade someon houston ticket...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,6 +526,160 @@
    ],
    "source": [
     "df['category'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>content</th>\n",
+       "      <th>text</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>empty</td>\n",
+       "      <td>@tiffanylue i know  i was listenin to bad habi...</td>\n",
+       "      <td>tiffanylu know listenin bad habit earlier star...</td>\n",
+       "      <td>Concern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sadness</td>\n",
+       "      <td>Layin n bed with a headache  ughhhh...waitin o...</td>\n",
+       "      <td>layin n bed headach ughhhhwaitin call</td>\n",
+       "      <td>Concern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sadness</td>\n",
+       "      <td>Funeral ceremony...gloomy friday...</td>\n",
+       "      <td>funer ceremonygloomi friday</td>\n",
+       "      <td>Concern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>enthusiasm</td>\n",
+       "      <td>wants to hang out with friends SOON!</td>\n",
+       "      <td>want hang friend soon</td>\n",
+       "      <td>Not Concerned</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>neutral</td>\n",
+       "      <td>@dannycastillo We want to trade with someone w...</td>\n",
+       "      <td>dannycastillo want trade someon houston ticket...</td>\n",
+       "      <td>Neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39995</th>\n",
+       "      <td>neutral</td>\n",
+       "      <td>@JohnLloydTaylor</td>\n",
+       "      <td>johnlloydtaylor</td>\n",
+       "      <td>Neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39996</th>\n",
+       "      <td>love</td>\n",
+       "      <td>Happy Mothers Day  All my love</td>\n",
+       "      <td>happi mother day love</td>\n",
+       "      <td>Not Concerned</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39997</th>\n",
+       "      <td>love</td>\n",
+       "      <td>Happy Mother's Day to all the mommies out ther...</td>\n",
+       "      <td>happi mother day mommi woman man long your mom...</td>\n",
+       "      <td>Not Concerned</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39998</th>\n",
+       "      <td>happiness</td>\n",
+       "      <td>@niariley WASSUP BEAUTIFUL!!! FOLLOW ME!!  PEE...</td>\n",
+       "      <td>niariley wassup beauti follow peep new hit sin...</td>\n",
+       "      <td>Not Concerned</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39999</th>\n",
+       "      <td>love</td>\n",
+       "      <td>@mopedronin bullet train from tokyo    the gf ...</td>\n",
+       "      <td>mopedronin bullet train tokyo gf visit japan s...</td>\n",
+       "      <td>Not Concerned</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>40000 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        sentiment                                            content  \\\n",
+       "0           empty  @tiffanylue i know  i was listenin to bad habi...   \n",
+       "1         sadness  Layin n bed with a headache  ughhhh...waitin o...   \n",
+       "2         sadness                Funeral ceremony...gloomy friday...   \n",
+       "3      enthusiasm               wants to hang out with friends SOON!   \n",
+       "4         neutral  @dannycastillo We want to trade with someone w...   \n",
+       "...           ...                                                ...   \n",
+       "39995     neutral                                   @JohnLloydTaylor   \n",
+       "39996        love                     Happy Mothers Day  All my love   \n",
+       "39997        love  Happy Mother's Day to all the mommies out ther...   \n",
+       "39998   happiness  @niariley WASSUP BEAUTIFUL!!! FOLLOW ME!!  PEE...   \n",
+       "39999        love  @mopedronin bullet train from tokyo    the gf ...   \n",
+       "\n",
+       "                                                    text       category  \n",
+       "0      tiffanylu know listenin bad habit earlier star...        Concern  \n",
+       "1                  layin n bed headach ughhhhwaitin call        Concern  \n",
+       "2                            funer ceremonygloomi friday        Concern  \n",
+       "3                                  want hang friend soon  Not Concerned  \n",
+       "4      dannycastillo want trade someon houston ticket...        Neutral  \n",
+       "...                                                  ...            ...  \n",
+       "39995                                    johnlloydtaylor        Neutral  \n",
+       "39996                              happi mother day love  Not Concerned  \n",
+       "39997  happi mother day mommi woman man long your mom...  Not Concerned  \n",
+       "39998  niariley wassup beauti follow peep new hit sin...  Not Concerned  \n",
+       "39999  mopedronin bullet train tokyo gf visit japan s...  Not Concerned  \n",
+       "\n",
+       "[40000 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   }
  ],
