--- a/Data cleaning and EDA.ipynb
+++ b/Data cleaning and EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import nltk\n",
+    "import inflect\n",
+    "import contractions\n",
+    "from bs4 import BeautifulSoup\n",
+    "import re, string, unicodedata\n",
+    "from nltk import word_tokenize, sent_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import LancasterStemmer, WordNetLemmatizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +135,7 @@
        "4  1956968416     neutral  @dannycastillo We want to trade with someone w..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +156,7 @@
        "(40000, 3)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +205,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +225,7 @@
        "0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +268,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,21 +333,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean(text):\n",
-    "    text = text.lower()\n",
-    "    text = re.sub('[^\\w\\s]', '', text)\n",
-    "    text = [word for word in text.split() if word not in stop_words]\n",
-    "    text = [stemmer.stem(w) for w in text]\n",
-    "    return text"
+    "def text_preprocessing_platform(df, text_col, remove_stopwords=True):\n",
+    "    \n",
+    "    ## Define functions for individual steps\n",
+    "    # First function is used to denoise text\n",
+    "    def denoise_text(text):\n",
+    "        # Strip html if any. For ex. removing <html>, <p> tags\n",
+    "        soup = BeautifulSoup(text, \"html.parser\")\n",
+    "        text = soup.get_text()\n",
+    "        # Replace contractions in the text. For ex. didn't -> did not\n",
+    "        text = contractions.fix(text)\n",
+    "        return text\n",
+    "    \n",
+    "    ## Next step is text-normalization\n",
+    "    \n",
+    "    # Text normalization includes many steps.\n",
+    "    \n",
+    "    # Each function below serves a step.\n",
+    "    \n",
+    "    \n",
+    "    def remove_non_ascii(words):\n",
+    "        \"\"\"Remove non-ASCII characters from list of tokenized words\"\"\"\n",
+    "        new_words = []\n",
+    "        for word in words:\n",
+    "            new_word = unicodedata.normalize('NFKD', word).encode('ascii', 'ignore').decode('utf-8', 'ignore')\n",
+    "            new_words.append(new_word)\n",
+    "        return new_words\n",
+    "    \n",
+    "    \n",
+    "    def to_lowercase(words):\n",
+    "        \"\"\"Convert all characters to lowercase from list of tokenized words\"\"\"\n",
+    "        new_words = []\n",
+    "        for word in words:\n",
+    "            new_word = word.lower()\n",
+    "            new_words.append(new_word)\n",
+    "        return new_words\n",
+    "    \n",
+    "    \n",
+    "    def remove_punctuation(words):\n",
+    "        \"\"\"Remove punctuation from list of tokenized words\"\"\"\n",
+    "        new_words = []\n",
+    "        for word in words:\n",
+    "            new_word = re.sub(r'[^\\w\\s]', '', word)\n",
+    "            if new_word != '':\n",
+    "                new_words.append(new_word)\n",
+    "        return new_words\n",
+    "    \n",
+    "    \n",
+    "    def replace_numbers(words):\n",
+    "        \"\"\"Replace all interger occurrences in list of tokenized words with textual representation\"\"\"\n",
+    "        p = inflect.engine()\n",
+    "        new_words = []\n",
+    "        for word in words:\n",
+    "            if word.isdigit():\n",
+    "                new_word = p.number_to_words(word)\n",
+    "                new_words.append(new_word)\n",
+    "            else:\n",
+    "                new_words.append(word)\n",
+    "        return new_words\n",
+    "    \n",
+    "    \n",
+    "    def remove_stopwords(words):\n",
+    "        \"\"\"Remove stop words from list of tokenized words\"\"\"\n",
+    "        new_words = []\n",
+    "        for word in words:\n",
+    "            if word not in stopwords.words('english'):\n",
+    "                new_words.append(word)\n",
+    "        return new_words\n",
+    "    \n",
+    "    \n",
+    "    def stem_words(words):\n",
+    "        \"\"\"Stem words in list of tokenized words\"\"\"\n",
+    "        stemmer = LancasterStemmer()\n",
+    "        stems = []\n",
+    "        for word in words:\n",
+    "            stem = stemmer.stem(word)\n",
+    "            stems.append(stem)\n",
+    "        return stems\n",
+    "    \n",
+    "    \n",
+    "    def lemmatize_verbs(words):\n",
+    "        \"\"\"Lemmatize verbs in list of tokenized words\"\"\"\n",
+    "        lemmatizer = WordNetLemmatizer()\n",
+    "        lemmas = []\n",
+    "        for word in words:\n",
+    "            lemma = lemmatizer.lemmatize(word, pos='v')\n",
+    "            lemmas.append(lemma)\n",
+    "        return lemmas\n",
+    "    \n",
+    "    \n",
+    "    ### A wrap-up function for normalization\n",
+    "    def normalize_text(words, remove_stopwords):\n",
+    "        words = remove_non_ascii(words)\n",
+    "        words = to_lowercase(words)\n",
+    "        words = remove_punctuation(words)\n",
+    "        words = replace_numbers(words)\n",
+    "        if remove_stopwords:\n",
+    "            words = remove_stopwords(words)\n",
+    "        #words = stem_words(words)\n",
+    "        words = lemmatize_verbs(words)\n",
+    "        return words\n",
+    "    \n",
+    "    # All above functions work on word tokens we need a tokenizer\n",
+    "    \n",
+    "    # Tokenize tweet into words\n",
+    "    def tokenize(text):\n",
+    "        return nltk.word_tokenize(text)\n",
+    "    \n",
+    "    \n",
+    "    # A overall wrap-up function\n",
+    "    def text_prepare(text):\n",
+    "        text = denoise_text(text)\n",
+    "        text = ' '.join([x for x in normalize_text(tokenize(text), remove_stopwords)])\n",
+    "        return text\n",
+    "    \n",
+    "    # run every-step\n",
+    "    df[text_col] = [text_prepare(x) for x in df[text_col]]\n",
+    "    \n",
+    "    \n",
+    "    # return processed df\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +551,7 @@
        "4  dannycastillo want trade someon houston ticket...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +585,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +651,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +805,7 @@
        "[40000 rows x 4 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,13 +813,6 @@
    "source": [
     "df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
