--- a/Data cleaning and EDA.ipynb
+++ b/Data cleaning and EDA.ipynb
@@ -332,8 +332,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Remove junk"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,6 +620,14 @@
     "\n",
     "# Apply the function along the rows of the DataFrame\n",
     "df['category'] = df.apply(categorize_sentiment, axis=1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Balance data"
    ]
   },
   {
