--- a/Data cleaning and EDA.ipynb
+++ b/Data cleaning and EDA.ipynb
@@ -829,6 +829,301 @@
    "source": [
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 28000; Test: 12000\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_df, test_df = train_test_split(df, test_size=0.3, random_state=42)\n",
+    "print(f'Train: {len(train_df)}; Test: {len(test_df)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train: 28000; X_test: 9000; X_valid: 3000\n",
+      "y_train: 28000; y_test: 9000; y_valid: 3000\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train = train_df['text'].values\n",
+    "y_train = train_df['category'].values\n",
+    "\n",
+    "X = test_df['text'].values\n",
+    "y = test_df['category'].values\n",
+    "\n",
+    "X_test, X_valid, y_test, y_valid = train_test_split(X, y, test_size=0.25, random_state=42)\n",
+    "\n",
+    "print(f'X_train: {len(X_train)}; X_test: {len(X_test)}; X_valid: {len(X_valid)}')\n",
+    "print(f'y_train: {len(y_train)}; y_test: {len(y_test)}; y_valid: {len(y_valid)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "encoder = OneHotEncoder()\n",
+    "y_train = encoder.fit_transform(np.array(y_train).reshape(-1, 1)).toarray()\n",
+    "y_test = encoder.fit_transform(np.array(y_test).reshape(-1, 1)).toarray()\n",
+    "y_valid = encoder.fit_transform(np.array(y_valid).reshape(-1, 1)).toarray()\n",
+    "labels = np.unique(encoder.inverse_transform(y_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import RobertaTokenizerFast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c4647b1851b040acaa42667b66da4b53",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/899k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8040e989bdd04539a680def110369ae8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/456k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "76653656d84740519bb8a291dbd21d27",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/150 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4a759f4b81684abdad051a7b9bcfdef5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/768 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tokenizer_roberta = RobertaTokenizerFast.from_pretrained('cardiffnlp/twitter-roberta-base-emotion')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "is_train=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3cece826b5a64c0b850c116dd5052644",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/899k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "507a19609c4b4e6ca5c328457939c949",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/456k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "47d205c839ff437596422fd8c7f7c99d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/25.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f6c6d4a935354e17920a3665270b59ea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/481 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "41c45fcf60b74710bfe4e28ef6977749",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/501M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from transformers import RobertaTokenizer, RobertaForSequenceClassification\n",
+    "from torch.nn.utils.rnn import pad_sequence\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "# Define the RoBERTa model and tokenizer\n",
+    "model_name = 'roberta-base'\n",
+    "tokenizer = RobertaTokenizer.from_pretrained(model_name)\n",
+    "model = RobertaForSequenceClassification.from_pretrained(model_name, num_labels=3)\n",
+    "\n",
+    "# Tokenize and preprocess the text data\n",
+    "def tokenize_text(text):\n",
+    "    tokens = tokenizer.encode(text, add_special_tokens=True, padding=True, truncation=True)\n",
+    "    return tokens\n",
+    "\n",
+    "train_df['TokenizedText'] = train_df['text'].apply(tokenize_text)\n",
+    "val_df['TokenizedText'] = val_df['text'].apply(tokenize_text)\n",
+    "test_df['TokenizedText'] = test_df['text'].apply(tokenize_text)\n",
+    "\n",
+    "# Convert tokenized data to PyTorch tensors with padding\n",
+    "X_train = pad_sequence([torch.tensor(seq) for seq in train_df['TokenizedText']], batch_first=True)\n",
+    "y_train = torch.tensor(train_df['category'].tolist())\n",
+    "X_val = pad_sequence([torch.tensor(seq) for seq in val_df['TokenizedText']], batch_first=True)\n",
+    "y_val = torch.tensor(val_df['category'].tolist())\n",
+    "X_test = pad_sequence([torch.tensor(seq) for seq in test_df['TokenizedText']], batch_first=True)\n",
+    "y_test = torch.tensor(test_df['category'].tolist())\n",
+    "\n",
+    "# Define a DataLoader for batching data\n",
+    "train_dataset = TensorDataset(X_train, y_train)\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+    "val_dataset = TensorDataset(X_val, y_val)\n",
+    "val_dataloader = DataLoader(val_dataset, batch_size=32)\n",
+    "test_dataset = TensorDataset(X_test, y_test)\n",
+    "test_dataloader = DataLoader(test_dataset, batch_size=32)\n",
+    "\n",
+    "# Define the training loop\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=1e-5)\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "\n",
+    "def train(model, dataloader, optimizer, criterion):\n",
+    "    model.train()\n",
+    "    total_loss = 0.0\n",
+    "    for batch in tqdm(dataloader, desc=\"Training\"):\n",
+    "        inputs, labels = batch\n",
+    "        inputs, labels = inputs.to(device), labels.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(inputs, labels=labels)  # Attention mask added by default\n",
+    "        loss = criterion(outputs.logits, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        total_loss += loss.item()\n",
+    "    return total_loss / len(dataloader)"
+   ]
   }
  ],
  "metadata": {
