--- a/Data cleaning and EDA.ipynb
+++ b/Data cleaning and EDA.ipynb
@@ -994,6 +994,40 @@
     "        total_loss += loss.item()\n",
     "    return total_loss / len(dataloader)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for epoch in range(3):  # Run for 3 epochs\n",
+    "    train_loss = train(model, train_dataloader, optimizer, criterion)\n",
+    "    print(f\"Epoch {epoch+1}/{3}, Train Loss: {train_loss:.4f}\")\n",
+    "\n",
+    "# Evaluate the model on the test dataset\n",
+    "model.eval()\n",
+    "y_true = []\n",
+    "y_pred = []\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for batch in tqdm(test_dataloader, desc=\"Evaluating\"):\n",
+    "        inputs, labels = batch\n",
+    "        inputs, labels = inputs.to(device), labels.to(device)\n",
+    "        outputs = model(inputs)\n",
+    "        _, predicted = torch.max(outputs.logits, 1)\n",
+    "        y_true.extend(labels.cpu().numpy())\n",
+    "        y_pred.extend(predicted.cpu().numpy())\n",
+    "\n",
+    "# Calculate confusion matrix and classification report\n",
+    "cm = confusion_matrix(y_true, y_pred)\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(cm)\n",
+    "\n",
+    "report = classification_report(y_true, y_pred, target_names=label_mapping.keys())\n",
+    "print(\"Classification Report:\")\n",
+    "print(report)"
+   ]
   }
  ],
  "metadata": {
