--- a/Data cleaning and EDA.ipynb
+++ b/Data cleaning and EDA.ipynb
@@ -323,16 +323,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stop_words = stopwords.words('english')\n",
-    "stemmer = SnowballStemmer('english')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -369,6 +359,16 @@
     "nltk.download('stopwords')\n",
     "nltk.download('wordnet')\n",
     "nltk.download('omw-1.4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop_words = stopwords.words('english')\n",
+    "stemmer = SnowballStemmer('english')"
    ]
   },
   {
@@ -954,9 +954,9 @@
     "    tokens = tokenizer.encode(text, add_special_tokens=True, padding=True, truncation=True)\n",
     "    return tokens\n",
     "\n",
-    "train_df['TokenizedText'] = train_df['text'].apply(tokenize_text)\n",
-    "val_df['TokenizedText'] = val_df['text'].apply(tokenize_text)\n",
-    "test_df['TokenizedText'] = test_df['text'].apply(tokenize_text)\n",
+    "train_df['TokenizedText'] = train_df['content'].apply(tokenize_text)\n",
+    "val_df['TokenizedText'] = val_df['content'].apply(tokenize_text)\n",
+    "test_df['TokenizedText'] = test_df['content'].apply(tokenize_text)\n",
     "\n",
     "# Convert tokenized data to PyTorch tensors with padding\n",
     "X_train = pad_sequence([torch.tensor(seq) for seq in train_df['TokenizedText']], batch_first=True)\n",
