--- a/Data cleaning and EDA.ipynb
+++ b/Data cleaning and EDA.ipynb
@@ -955,29 +955,24 @@
     "    return tokens\n",
     "\n",
     "train_df['TokenizedText'] = train_df['content'].apply(tokenize_text)\n",
-    "val_df['TokenizedText'] = val_df['content'].apply(tokenize_text)\n",
     "test_df['TokenizedText'] = test_df['content'].apply(tokenize_text)\n",
     "\n",
     "# Convert tokenized data to PyTorch tensors with padding\n",
     "X_train = pad_sequence([torch.tensor(seq) for seq in train_df['TokenizedText']], batch_first=True)\n",
     "y_train = torch.tensor(train_df['category'].tolist())\n",
-    "X_val = pad_sequence([torch.tensor(seq) for seq in val_df['TokenizedText']], batch_first=True)\n",
-    "y_val = torch.tensor(val_df['category'].tolist())\n",
     "X_test = pad_sequence([torch.tensor(seq) for seq in test_df['TokenizedText']], batch_first=True)\n",
     "y_test = torch.tensor(test_df['category'].tolist())\n",
     "\n",
     "# Define a DataLoader for batching data\n",
     "train_dataset = TensorDataset(X_train, y_train)\n",
-    "train_dataloader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
-    "val_dataset = TensorDataset(X_val, y_val)\n",
-    "val_dataloader = DataLoader(val_dataset, batch_size=32)\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
     "test_dataset = TensorDataset(X_test, y_test)\n",
-    "test_dataloader = DataLoader(test_dataset, batch_size=32)\n",
+    "test_dataloader = DataLoader(test_dataset, batch_size=64)\n",
     "\n",
     "# Define the training loop\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "model.to(device)\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=1e-5)\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=0.1)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
     "def train(model, dataloader, optimizer, criterion):\n",
@@ -1001,7 +996,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for epoch in range(3):  # Run for 3 epochs\n",
+    "for epoch in range(1):  # Run for 3 epochs\n",
     "    train_loss = train(model, train_dataloader, optimizer, criterion)\n",
     "    print(f\"Epoch {epoch+1}/{3}, Train Loss: {train_loss:.4f}\")\n",
     "\n",
