--- a/Data cleaning and EDA.ipynb
+++ b/Data cleaning and EDA.ipynb
@@ -846,6 +846,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_mapping = {'Concerned': 0, 'Neutral': 1, 'Not Concerned': 2}\n",
+    "df['category'] = df['category'].map(label_mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
