--- a/Data cleaning and EDA.ipynb
+++ b/Data cleaning and EDA.ipynb
@@ -1031,7 +1031,7 @@
     "\n",
     "report = classification_report(y_true, y_pred, target_names=label_mapping.keys())\n",
     "print(\"Classification Report:\")\n",
-    "print(report)\n"
+    "print(report)"
    ]
   }
  ],
